--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 .main {
     margin: 0 10vw;
+    padding-bottom: 5vw;
 }
 
 .main h1 {
@@ -210,6 +211,7 @@
 @media screen and (max-width: 539px) {
     .main {
         margin: 0;
+        padding: 0;
     }
 
     .main h1 {
